# task-time-tracker

./: .gitignore  LICENSE  README.md  main.ui  pyproject.toml  styles.qss
task_time_tracker/: main.py  scripts.py
task_time_tracker/model/: __init__.py  db.py  entities.py  repository.py
task_time_tracker/ui/: main.ui
