[tool.poetry]
name = "task-time-tracker"
version = "0.1.0"
description = ""
authors = ["Jose Antonio Dosil Toja <josedosilt@gmail.com>"]
readme = "README.md"
packages = [{include = "task_time_tracker"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
