[tool.poetry]
name = "task-time-tracker"
version = "0.1.0"
description = ""
authors = ["Jose Antonio Dosil Toja <josedosilt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.4.0"
mypy = "^0.991"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "task_time_tracker.main:start"